contact page, fixed a bug on css. added spacing to the drop down list on the contact page.

--- a/web/css/contact.css
+++ b/web/css/contact.css
@@ -1,5 +1,5 @@
 #email-subject{
-    width: 188px
+    width: 186px
 }
 
 #contact-page .contact-part {
